--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,9 @@ output:
 navbar:
   left:
     - text: "Home"
+      href: https://lucakozma.github.io/
+      icon: fa-user
+    - text: "ReproT main page"
       href: index.html
       icon: fa-house
     - text: "2025/2026"
