--- a/_site.yml
+++ b/_site.yml
@@ -11,7 +11,7 @@ navbar:
       icon: fa-user
     - text: "ReproT main page"
       href: index.html
-      icon: fa-house
+      icon: fa-mug-hot
     - text: "2025/2026"
       href: 20252026.html
     - text: "2024/2025"
